<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:baselineAligned="false"
    android:weightSum="1">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="top"
        android:text="@string/welcome"/>

    <TextView
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_gravity="center_horizontal"
        android:gravity="bottom"
        android:text="@string/instructions"
        android:textStyle="bold"/>

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="381dp"
        android:layout_gravity="center"
        android:layout_weight="0.67"/>

    <Button
        android:id="@+id/confirm1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:elevation="11dp"
        android:gravity="center"
        android:text="@string/confirm"
        android:textAlignment="center"
        android:textStyle="bold"/>



</LinearLayout>
</FrameLayout>
